--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "FoodieTree",
+  "name": "지구를 지키는 푸디트리!",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon_dark.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "greenlogo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x159"
     },
     {
-      "src": "logo512.png",
+      "src": "greenlogo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x424"
     }
   ],
   "start_url": ".",
