--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,8 @@ jobs:
             
             env | grep PATH
             
+            export PATH=$PATH:/usr/local/bin
+            
             echo changeDirectory
             cd ${{ secrets.RUN_PATH }}
             
