--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,16 +26,15 @@ jobs:
           echo "${{ secrets.ENV }}" > .env
           CI=false npm run build
 
-      - name: copy config file
-        run: |
-          echo "${{ secrets.NGINX_CONF }}" > nginx.conf
-
       - name: docker image build
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
           docker build --no-cache -t ${{ secrets.DOCKER_USERNAME }}/foodie-app:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/foodie-app:latest
 
+  conn-remote-exec:
+    runs-on: ubuntu-latest
+    steps:
       - name: == host CI/CD ==
         uses: appleboy/ssh-action@master
         with:
@@ -49,14 +48,17 @@ jobs:
             mkdir -p foodie-app
             
             cd ./foodie-app
+            mkdir -p cert
             echo "${{ secrets.DOCKER_YML }}" > ./docker-compose.yml
-            echo "${{ secrets.CERTI_CRT }}" > ./certi.crt
-            echo "${{ secrets.SSL_PRIVATE_KEY }}" > ./private.key
-
+            echo "${{ secrets.CERTI_CRT }}" > ./cert/certi.crt
+            echo "${{ secrets.SSL_PRIVATE_KEY }}" > ./cert/private.key
+            echo "${{ secrets.NGINX_CONF }}" > ./nginx.conf
+            
+  
             docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-
+  
             echo "Stopping existing container..."
-            docker compose down || true
+            docker compose down --remove-orphans || true
             
             echo "Pulling Docker image..."
             docker pull ${{ secrets.DOCKER_USERNAME }}/foodie-app:latest
