--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,24 +57,27 @@ jobs:
             echo "Stopping existing container..."
             docker compose down --remove-orphans || true
             
+            echo "Remove Existing Docker image..."
+            docker rmi ${{ secrets.DOCKER_USERNAME }}/foodie-app:latest || true
+            
             echo "Pulling Docker image..."
             docker pull ${{ secrets.DOCKER_USERNAME }}/foodie-app:latest
             
             echo "Starting new container..."
             docker compose up -d
 
-#      - name: Discord Alert Success
-#        uses: sarisia/actions-status-discord@v1
-#        if: success()
-#        with:
-#            webhook: ${{ secrets.DISCORD_WEBHOOK }}
-#            description: "사이트가 배포되었습니다!"
-#
-#      - name: Discord Alert Failure
-#        uses: sarisia/actions-status-discord@v1
-#        if: failure()
-#        with:
-#          webhook: ${{ secrets.DISCORD_WEBHOOK }}
-#          description: "사이트 배포를 실패하였습니다."
+      - name: Discord Alert Success
+        uses: sarisia/actions-status-discord@v1
+        if: success()
+        with:
+            webhook: ${{ secrets.DISCORD_WEBHOOK }}
+            description: "사이트가 배포되었습니다!"
+
+      - name: Discord Alert Failure
+        uses: sarisia/actions-status-discord@v1
+        if: failure()
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          description: "사이트 배포를 실패하였습니다."
 
 
